[gd_scene load_steps=2 format=2]

[ext_resource path="res://Authentication/Register.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 757.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04
alignment = 1

[node name="Firstname" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 505.0
margin_bottom = 104.0
size_flags_vertical = 0
text = "Firstname"
autowrap = true

[node name="FirstnameInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 505.0
margin_bottom = 132.0

[node name="Lastname" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 505.0
margin_bottom = 167.0
size_flags_vertical = 0
text = "
Lastname"
autowrap = true

[node name="LastnameInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 505.0
margin_bottom = 195.0

[node name="Mail" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 505.0
margin_bottom = 230.0
size_flags_vertical = 0
text = "
Mail"
autowrap = true

[node name="MailInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 505.0
margin_bottom = 258.0

[node name="Password" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 505.0
margin_bottom = 293.0
size_flags_vertical = 0
text = "
Password"
autowrap = true

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 505.0
margin_bottom = 321.0
secret = true

[node name="ConfirmPassword" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 505.0
margin_bottom = 356.0
size_flags_vertical = 0
text = "
Confirm password"
autowrap = true

[node name="ConfirmPasswordInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 505.0
margin_bottom = 384.0
secret = true

[node name="RoleCheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 505.0
margin_bottom = 412.0
text = "I am a teacher"

[node name="Register" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 505.0
margin_bottom = 436.0
text = "Register"

[node name="Log" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 505.0
margin_bottom = 471.0
size_flags_vertical = 0
text = "
"
autowrap = true

[node name="Back" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 475.0
margin_right = 505.0
margin_bottom = 495.0
text = "Back"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
